--- a/RLGAN-p1-MLP.ipynb
+++ b/RLGAN-p1-MLP.ipynb
@@ -60,20 +60,7 @@
     "\n",
     "    def print_num_parameters(self):\n",
     "        total_params = sum(p.numel() for p in self.parameters())\n",
-    "        print(f\"Total number of parameters: {total_params}\")\n",
-    "\n",
-    "class ReplayBuffer:\n",
-    "    def __init__(self, buffer_size: int):\n",
-    "        self.buffer_size = buffer_size\n",
-    "        self.buffer = []\n",
-    "\n",
-    "    def add(self, state, action, reward, next_state, done):\n",
-    "        if len(self.buffer) >= self.buffer_size:\n",
-    "            self.buffer.pop(0)\n",
-    "        self.buffer.append((state, action, reward, next_state, done))\n",
-    "\n",
-    "    def sample(self, batch_size: int):\n",
-    "        return random.sample(self.buffer, batch_size)"
+    "        print(f\"Total number of parameters: {total_params}\")"
    ]
   },
   {
