p1 hecha, falta mejorar el AG

--- a/RLGAN-p1-MLP.ipynb
+++ b/RLGAN-p1-MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,6 +25,9 @@
     "import numpy as np\n",
     "import time\n",
     "import random\n",
+    "import os\n",
+    "import shutil\n",
+    "from gymnasium.wrappers import RecordVideo\n",
     "\n",
     "# %matplotlib inline\n",
     "\n",
@@ -36,12 +39,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Torch MLP**"
+    "## **MLP arquitecture**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +64,13 @@
     "    def print_num_parameters(self):\n",
     "        total_params = sum(p.numel() for p in self.parameters())\n",
     "        print(f\"Total number of parameters: {total_params}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Training**"
    ]
   },
   {
@@ -213,7 +223,7 @@
     "plt.title('Reward History')\n",
     "plt.legend(loc='center right')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('images/lunar_lander_MLP.png')\n",
+    "plt.savefig('results/lunar_lander_MLP.png')\n",
     "plt.show()\n"
    ]
   },
@@ -226,59 +236,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\aleja\\AppData\\Local\\Temp\\ipykernel_13856\\351816603.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"lunar_lander_MLP.pt\"))\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 1: Total Reward = 201.0023794277628\n",
-      "Episode 2: Total Reward = 219.0360231293572\n",
-      "Episode 3: Total Reward = 230.1383080705971\n"
+      "Episode 1: Total Reward = -84.98463838156727\n",
+      "Episode 2: Total Reward = 246.20729146747868\n",
+      "Episode 3: Total Reward = 222.206707043378\n"
      ]
     }
    ],
    "source": [
-    "model.load_state_dict(torch.load(\"lunar_lander_MLP.pt\"))\n",
+    "model = Torch_MLP(layer_dims)\n",
+    "model.load_state_dict(torch.load(\"lunar_lander_MLP.pt\", weights_only=True))\n",
     "model.eval()\n",
     "\n",
-    "env = gym.make('LunarLander-v3', render_mode='human')\n",
-    "state, _ = env.reset()\n",
+    "num_episodes_test = 3\n",
+    "destiny_folder = \"results/videos\"\n",
+    "env = gym.make(\"LunarLander-v3\", render_mode=\"rgb_array\")\n",
+    "env = RecordVideo(env, video_folder=destiny_folder, name_prefix=\"MLP\", episode_trigger=lambda x: x < num_episodes_test)  \n",
     "\n",
-    "epsilon = 0.15\n",
-    "def policy(state, epsilon=epsilon):\n",
+    "def policy(state, epsilon=0.15):\n",
     "    if random.random() < epsilon:\n",
     "        return env.action_space.sample()  # Explore\n",
     "    else:\n",
-    "        state_tensor = torch.tensor(state, dtype=torch.float32).to(device)\n",
+    "        state_tensor = torch.tensor(state, dtype=torch.float32)\n",
     "        with torch.no_grad():  # Disable gradient calculation\n",
     "            action_values = model(state_tensor)\n",
     "        return torch.argmax(action_values).item()  # Exploit\n",
     "\n",
-    "num_episodes_test = 5\n",
-    "\n",
+    "state, _ = env.reset()\n",
     "for episode in range(num_episodes_test):\n",
-    "    state, _ = env.reset()\n",
     "    done = False\n",
     "    total_reward = 0\n",
     "    \n",
     "    while not done:\n",
-    "        env.render()  # Muestra el entorno\n",
-    "        action = policy(state)  # Selecciona la acción según el modelo\n",
-    "        next_state, reward, done, _, _ = env.step(action)  # Avanza al siguiente paso\n",
+    "        action = policy(state)  \n",
+    "        next_state, reward, done, _, _ = env.step(action) \n",
     "        total_reward += reward\n",
     "        state = next_state\n",
-    "    \n",
-    "    print(f\"Episode {episode + 1}: Total Reward = {total_reward}\")\n",
+    "\n",
+    "        if done:\n",
+    "            print(f\"Episode {episode + 1}: Total Reward = {total_reward}\")\n",
+    "            state, _ = env.reset()\n",
+    "            break  # pasar al siguiente\n",
     "\n",
     "env.close()"
    ]
