ultra hiper mega actualización, p2 casi probada

--- a/RLGAN-p1-AG.ipynb
+++ b/RLGAN-p1-AG.ipynb
@@ -179,7 +179,7 @@
     "print(f\"*******Tiempo evolución: {int(minutos)} minutos y {segundos:.2f} segundos*******\")\n",
     "\n",
     "best_chromosome = genetic_algorithm.best_global_individual[1]\n",
-    "np.savetxt(\"lunar_lander_AG.txt\", best_chromosome)"
+    "np.savetxt(\"results_p1/lunar_lander_AG.txt\", best_chromosome)"
    ]
   },
   {
@@ -237,7 +237,7 @@
     "    plt.title('Fitness Evolution')\n",
     "    plt.legend(loc='center left')\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(\"results/lunar_lander_AG.png\")\n",
+    "    plt.savefig(\"results_p1/lunar_lander_AG.png\")\n",
     "    plt.show()\n",
     "\n",
     "plot_fitnesses_evolution()"
@@ -268,12 +268,12 @@
     }
    ],
    "source": [
-    "test_chromosome = np.loadtxt(\"lunar_lander_AG.txt\").tolist()\n",
+    "test_chromosome = np.loadtxt(\"results_p1/lunar_lander_AG.txt\").tolist()\n",
     "test_model = architecture # previously defined MLP model\n",
     "test_model.from_chromosome(test_chromosome)\n",
     "\n",
     "num_episodes_test = 3\n",
-    "destiny_folder = \"results/videos\"\n",
+    "destiny_folder = \"results_p1/videos\"\n",
     "test_env = gym.make(\"LunarLander-v3\", render_mode=\"rgb_array\")\n",
     "test_env = RecordVideo(test_env, video_folder=destiny_folder, name_prefix=\"AG\", episode_trigger=lambda x: x < num_episodes_test)  \n",
     "\n",
@@ -337,7 +337,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv_torch",
    "language": "python",
    "name": "python3"
   },
