--- a/RLGAN-p1-MLP.ipynb
+++ b/RLGAN-p1-MLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'cuda'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,8 +25,6 @@
     "import numpy as np\n",
     "import time\n",
     "import random\n",
-    "import os\n",
-    "import shutil\n",
     "from gymnasium.wrappers import RecordVideo\n",
     "\n",
     "# %matplotlib inline\n",
@@ -223,7 +221,7 @@
     "plt.title('Reward History')\n",
     "plt.legend(loc='center right')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('results/lunar_lander_MLP.png')\n",
+    "plt.savefig('results_p1/lunar_lander_MLP.png')\n",
     "plt.show()\n"
    ]
   },
@@ -255,7 +253,7 @@
     "model.eval()\n",
     "\n",
     "num_episodes_test = 3\n",
-    "destiny_folder = \"results/videos\"\n",
+    "destiny_folder = \"results_p1/videos\"\n",
     "env = gym.make(\"LunarLander-v3\", render_mode=\"rgb_array\")\n",
     "env = RecordVideo(env, video_folder=destiny_folder, name_prefix=\"MLP\", episode_trigger=lambda x: x < num_episodes_test)  \n",
     "\n",
@@ -290,7 +288,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv_torch",
    "language": "python",
    "name": "python3"
   },
