pues p2 también hecha, falta entrenar más

--- a/RLGAN-p1-MLP.ipynb
+++ b/RLGAN-p1-MLP.ipynb
@@ -222,7 +222,7 @@
     "plt.legend(loc='center right')\n",
     "plt.tight_layout()\n",
     "plt.savefig('results_p1/lunar_lander_MLP.png')\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -248,41 +248,41 @@
     }
    ],
    "source": [
-    "model = Torch_MLP(layer_dims)\n",
-    "model.load_state_dict(torch.load(\"lunar_lander_MLP.pt\", weights_only=True))\n",
-    "model.eval()\n",
+    "test_model = Torch_MLP(layer_dims)\n",
+    "test_model.load_state_dict(torch.load(\"lunar_lander_MLP.pt\", weights_only=True))\n",
+    "test_model.eval()\n",
     "\n",
     "num_episodes_test = 3\n",
     "destiny_folder = \"results_p1/videos\"\n",
-    "env = gym.make(\"LunarLander-v3\", render_mode=\"rgb_array\")\n",
-    "env = RecordVideo(env, video_folder=destiny_folder, name_prefix=\"MLP\", episode_trigger=lambda x: x < num_episodes_test)  \n",
+    "test_env = gym.make(\"LunarLander-v3\", render_mode=\"rgb_array\")\n",
+    "test_env = RecordVideo(test_env, video_folder=destiny_folder, name_prefix=\"MLP\", episode_trigger=lambda x: x < num_episodes_test)  \n",
     "\n",
     "def policy(state, epsilon=0.15):\n",
     "    if random.random() < epsilon:\n",
-    "        return env.action_space.sample()  # Explore\n",
+    "        return test_env.action_space.sample()  # Explore\n",
     "    else:\n",
     "        state_tensor = torch.tensor(state, dtype=torch.float32)\n",
     "        with torch.no_grad():  # Disable gradient calculation\n",
-    "            action_values = model(state_tensor)\n",
+    "            action_values = test_model(state_tensor)\n",
     "        return torch.argmax(action_values).item()  # Exploit\n",
     "\n",
-    "state, _ = env.reset()\n",
+    "state, _ = test_env.reset()\n",
     "for episode in range(num_episodes_test):\n",
     "    done = False\n",
     "    total_reward = 0\n",
     "    \n",
     "    while not done:\n",
     "        action = policy(state)  \n",
-    "        next_state, reward, done, _, _ = env.step(action) \n",
+    "        next_state, reward, done, _, _ = test_env.step(action) \n",
     "        total_reward += reward\n",
     "        state = next_state\n",
     "\n",
     "        if done:\n",
     "            print(f\"Episode {episode + 1}: Total Reward = {total_reward}\")\n",
-    "            state, _ = env.reset()\n",
+    "            state, _ = test_env.reset()\n",
     "            break  # pasar al siguiente\n",
     "\n",
-    "env.close()"
+    "test_env.close()"
    ]
   }
  ],
