trying flappy bird with torch MLP

--- a/RLGAN-p2-GAN.ipynb
+++ b/RLGAN-p2-GAN.ipynb
@@ -405,8 +405,11 @@
     "        # Activation layer is used to apply the sigmoid activation function to the output\n",
     "        # sigmoid activation function is used because the output is a probability between 0 and 1\n",
     "    \n",
-    "    model.add(Dense(1))\n",
-    "    model.add(Activation('sigmoid'))\n",
+    "    # model.add(Dense(1))\n",
+    "    # model.add(Activation('sigmoid'))\n",
+    "\n",
+    "    model.add(Dense(2))\n",
+    "    model.add(Activation('softmax'))\n",
     "    \n",
     "    return model"
    ]
@@ -686,7 +689,7 @@
     "gen_learning_rate = 2e-4\n",
     "gen_beta_1 = 0.5\n",
     "\n",
-    "disc_learning_rate = 1e-5\n",
+    "disc_learning_rate = 2e-4\n",
     "disc_beta_1 = 0.5\n",
     "\n",
     "generator_optimizer = Adam(gen_learning_rate, beta_1=gen_beta_1)\n",
@@ -1045,7 +1048,7 @@
     "    # Adjust the padding between subplots\n",
     "    plt.tight_layout(pad=0.5)\n",
     "    # Save the figure as an image file\n",
-    "    plt.savefig(os.path.join(WORKDIR, 'GAN_img_predictions.png'))\n",
+    "    plt.savefig(os.path.join(WORKDIR, 'GAN_img_predictions_random.png'))\n",
     "    plt.show()\n",
     "\n",
     "plot_colorized_images_random(n_samples=12)"
