lavado de cara y flappy bird con genético

--- a/RLGAN-p1-AG.ipynb
+++ b/RLGAN-p1-AG.ipynb
@@ -180,9 +180,9 @@
     "print(f\"*******Tiempo evolución: {int(minutos)} minutos y {segundos:.2f} segundos*******\")\n",
     "\n",
     "best_chromosome = genetic_algorithm.best_global_individual[1]\n",
-    "np.savetxt(f\"results_p1/lunar_lander_AG_{GENERATIONS}.txt\", best_chromosome)\n",
+    "np.savetxt(f\"results_p1/lunar_lander_AG_{GENERATIONS}_best.txt\", best_chromosome)\n",
     "#save last best individual\n",
-    "np.savetxt(f\"results_p1/lunar_lander_AG_{GENERATIONS}_Last.txt\", genetic_algorithm.population[0])"
+    "np.savetxt(f\"results_p1/lunar_lander_AG_{GENERATIONS}_last.txt\", genetic_algorithm.population[0])"
    ]
   },
   {
@@ -296,7 +296,8 @@
     }
    ],
    "source": [
-    "test_chromosome = np.loadtxt(f\"results_p1/lunar_lander_AG_{GENERATIONS}.txt\").tolist()\n",
+    "test_chromosome = np.loadtxt(f\"results_p1/lunar_lander_AG_{GENERATIONS}_best.txt\").tolist()\n",
+    "# test_chromosome = np.loadtxt(f\"results_p1/lunar_lander_AG_{GENERATIONS}_last.txt\").tolist()\n",
     "test_model = architecture # previously defined MLP architecture\n",
     "test_model.from_chromosome(test_chromosome)\n",
     "\n",
