--- a/RLGAN-p1-DQN.ipynb
+++ b/RLGAN-p1-DQN.ipynb
@@ -4,12 +4,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import gymnasium as gym\n",
-    "\n",
-    "from gymnasium.wrappers import RecordVideo\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -18,28 +24,19 @@
     "import numpy as np\n",
     "import random\n",
     "from collections import deque\n",
+    "from gymnasium.wrappers import RecordVideo\n",
     "\n",
-    "env = gym.make('LunarLander-v3')"
+    "env = gym.make('LunarLander-v3')\n",
+    "device = \"cpu\"\n",
+    "print(device)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cpu\n",
-      "Episode 0/1. Epsilon: 0.000. Reward: -167.124\n",
-      "*******Tiempo entreno: 0 minutos y 0.02 segundos*******\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "class DQN(nn.Module):\n",
     "    def __init__(self, state_dim, num_actions):\n",
     "        super(DQN, self).__init__()\n",
@@ -52,8 +49,6 @@
     "        x = F.relu(self.fc2(x))\n",
     "        return self.fc3(x)\n",
     "\n",
-    "\n",
-    "# Experience Replay Buffer\n",
     "class ReplayBuffer:\n",
     "    def __init__(self, size):\n",
     "        self.buffer = deque(maxlen=size)\n",
@@ -74,18 +69,31 @@
     "        next_states = torch.tensor(np.array(next_states), dtype=torch.float32)\n",
     "        dones = torch.tensor(dones, dtype=torch.float32)\n",
     "        \n",
-    "        return states, actions, rewards, next_states, dones\n",
-    "\n",
+    "        return states, actions, rewards, next_states, dones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n",
+      "Episode 0/1. Epsilon: 0.000. Reward: -167.124\n",
+      "*******Tiempo entreno: 0 minutos y 0.02 segundos*******\n"
+     ]
+    }
+   ],
+   "source": [
     "# Hyperparameters\n",
     "epsilon = 1.0\n",
     "batch_size = 128\n",
     "discount = 0.99\n",
     "learning_rate = 0.0001\n",
-    "cur_frame = 0\n",
     "num_actions = env.action_space.n\n",
-    "\n",
-    "device = \"cpu\"\n",
-    "print(device)\n",
     "\n",
     "buffer = ReplayBuffer(100000)\n",
     "state_dim = env.observation_space.shape[0]  # Get state size\n",
@@ -128,6 +136,7 @@
     "num_episodes = 1\n",
     "trace = 50\n",
     "max_steps = 500  # 10 seconds * 50 FPS\n",
+    "cur_frame = 0\n",
     "best=-np.inf\n",
     "episode_reward_history=[]\n",
     "\n",
@@ -168,10 +177,11 @@
     "    if ep_reward > best:\n",
     "        best = ep_reward\n",
     "        torch.save(main_nn, f'results_p1/lunar_lander_DQN_{num_episodes}.pt')\n",
-    "minutos, segundos = divmod(time.time()-start, 60)\n",
-    "print(f\"*******Tiempo entreno: {int(minutos)} minutos y {segundos:.2f} segundos*******\")\n",
+    "        \n",
+    "env.close()\n",
     "\n",
-    "env.close()"
+    "minutos, segundos = divmod(time.time()-start, 60)\n",
+    "print(f\"*******Tiempo entreno: {int(minutos)} minutos y {segundos:.2f} segundos*******\")"
    ]
   },
   {
@@ -230,55 +240,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jaime/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/wrappers/rendering.py:416: UserWarning: \u001b[33mWARN: Unable to save last video! Did you call close()?\u001b[0m\n",
-      "  logger.warn(\"Unable to save last video! Did you call close()?\")\n",
-      "/home/jaime/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/wrappers/rendering.py:283: UserWarning: \u001b[33mWARN: Overwriting existing videos at /home/jaime/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/results_p1/videos folder (try specifying a different `video_folder` for the `RecordVideo` wrapper if this is not desired)\u001b[0m\n",
-      "  logger.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 0: Total Reward = 256.11504952397405\n",
-      "Episode 1: Total Reward = 253.51161787759293\n",
-      "Episode 2: Total Reward = 267.52438645827885\n",
-      "Episode 3: Total Reward = 284.94111619220394\n",
-      "Episode 4: Total Reward = 288.0354651116275\n",
-      "Episode 5: Total Reward = 246.45282625589957\n",
-      "Episode 6: Total Reward = 263.2124374534012\n",
-      "Episode 7: Total Reward = 267.3024273606909\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 21\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m done:\n\u001b[1;32m     20\u001b[0m     action \u001b[38;5;241m=\u001b[39m policy(state)  \n\u001b[0;32m---> 21\u001b[0m     next_state, reward, done, _, _ \u001b[38;5;241m=\u001b[39m \u001b[43mtest_env\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m \n\u001b[1;32m     22\u001b[0m     total_reward \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m reward\n\u001b[1;32m     23\u001b[0m     state \u001b[38;5;241m=\u001b[39m next_state\n",
-      "File \u001b[0;32m~/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/wrappers/rendering.py:356\u001b[0m, in \u001b[0;36mRecordVideo.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m    354\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart_recording(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname_prefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-step-\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstep_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    355\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrecording:\n\u001b[0;32m--> 356\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_capture_frame\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    358\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrecorded_frames) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvideo_length:\n\u001b[1;32m    359\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstop_recording()\n",
-      "File \u001b[0;32m~/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/wrappers/rendering.py:312\u001b[0m, in \u001b[0;36mRecordVideo._capture_frame\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_capture_frame\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    310\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrecording, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot capture a frame, recording wasn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt started.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 312\u001b[0m     frame \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    313\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(frame, List):\n\u001b[1;32m    314\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(frame) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:  \u001b[38;5;66;03m# render was called\u001b[39;00m\n",
-      "File \u001b[0;32m~/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/core.py:332\u001b[0m, in \u001b[0;36mWrapper.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    330\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrender\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m RenderFrame \u001b[38;5;241m|\u001b[39m \u001b[38;5;28mlist\u001b[39m[RenderFrame] \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    331\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Uses the :meth:`render` of the :attr:`env` that can be overwritten to change the returned data.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 332\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/wrappers/common.py:409\u001b[0m, in \u001b[0;36mOrderEnforcing.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    404\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_disable_render_order_enforcing \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_has_reset:\n\u001b[1;32m    405\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ResetNeeded(\n\u001b[1;32m    406\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot call `env.render()` before calling `env.reset()`, if this is an intended action, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    407\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mset `disable_render_order_enforcing=True` on the OrderEnforcer wrapper.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    408\u001b[0m     )\n\u001b[0;32m--> 409\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/core.py:332\u001b[0m, in \u001b[0;36mWrapper.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    330\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mrender\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m RenderFrame \u001b[38;5;241m|\u001b[39m \u001b[38;5;28mlist\u001b[39m[RenderFrame] \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    331\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Uses the :meth:`render` of the :attr:`env` that can be overwritten to change the returned data.\"\"\"\u001b[39;00m\n\u001b[0;32m--> 332\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/wrappers/common.py:303\u001b[0m, in \u001b[0;36mPassiveEnvChecker.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    301\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m env_render_passive_checker(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menv)\n\u001b[1;32m    302\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 303\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Escritorio/UPM/rl/RLGAN-project-MAADM-UPM/.venv/lib/python3.10/site-packages/gymnasium/envs/box2d/lunar_lander.py:718\u001b[0m, in \u001b[0;36mLunarLander.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    716\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m coord \u001b[38;5;129;01min\u001b[39;00m p:\n\u001b[1;32m    717\u001b[0m         scaled_poly\u001b[38;5;241m.\u001b[39mappend((coord[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m SCALE, coord[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m*\u001b[39m SCALE))\n\u001b[0;32m--> 718\u001b[0m     \u001b[43mpygame\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdraw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpolygon\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msurf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscaled_poly\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    719\u001b[0m     gfxdraw\u001b[38;5;241m.\u001b[39maapolygon(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msurf, scaled_poly, (\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m))\n\u001b[1;32m    721\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m obj \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparticles \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdrawlist:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Episode 0: Reward = 270.3660370618861\n",
+      "Episode 1: Reward = 274.1091027628154\n",
+      "Episode 2: Reward = 254.98924782042127\n",
+      "Episode 3: Reward = 250.1713377521564\n",
+      "Episode 4: Reward = 248.9847939822268\n",
+      "Episode 5: Reward = 256.16253414918833\n",
+      "Episode 6: Reward = 243.11612021028122\n",
+      "Episode 7: Reward = 286.4357980768614\n",
+      "Episode 8: Reward = 270.7322798417314\n",
+      "Episode 9: Reward = 270.6320423102727\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "test_model = torch.load(f'results_p1/lunar_lander_DQN_{num_episodes}.pt',weights_only=False)\n",
+    "test_model = torch.load(f'results_p1/lunar_lander_DQN_{num_episodes}.pt', weights_only=False)\n",
     "\n",
     "num_episodes_test = 10\n",
     "destiny_folder = \"results_p1/videos\"\n",
@@ -301,22 +284,15 @@
     "        total_reward += reward\n",
     "        state = next_state\n",
     "        if done:\n",
-    "            print(f\"Episode {episode}: Total Reward = {total_reward}\")\n",
+    "            print(f\"Episode {episode}: Reward = {total_reward}\")\n",
     "\n",
     "test_env.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv_torch",
    "language": "python",
    "name": "python3"
   },
@@ -330,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
